RESOLVED FIXED249917
[IFC][bidi] "unicode-bidi: plaintext" lets us ignore the root's directionality
https://bugs.webkit.org/show_bug.cgi?id=249917
Summary [IFC][bidi] "unicode-bidi: plaintext" lets us ignore the root's directionality
alan
Reported 2022-12-27 20:33:54 PST
ssia
Attachments
Patch (6.59 KB, patch)
2022-12-27 20:39 PST, alan
no flags
Patch (7.49 KB, patch)
2022-12-28 09:26 PST, alan
no flags
alan
Comment 1 2022-12-27 20:39:52 PST
alan
Comment 2 2022-12-28 09:26:13 PST
EWS
Comment 3 2022-12-28 10:17:10 PST
Committed 258348@main (ab848ffdaca3): <https://commits.webkit.org/258348@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464234 [details].
Radar WebKit Bug Importer
Comment 4 2022-12-28 10:18:22 PST
Note You need to log in before you can comment on or make changes to this bug.