[IFC][bidi] "unicode-bidi: plaintext" lets us ignore the root's directionality https://bugs.webkit.org/show_bug.cgi?id=249917

Reviewed by Antti Koivisto.

Let's compute the inline direction by calling ubidi_getBaseDirection when unicode-bidi is plaintext and the content does not trigger visual reordering otherwise.
https://w3c.github.io/csswg-drafts/css-writing-modes/#unicode-bidi

* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::InlineItemsBuilder):
(WebCore::Layout::InlineItemsBuilder::build):
(WebCore::Layout::InlineItemsBuilder::breakAndComputeBidiLevels):
(WebCore::Layout::InlineItemsBuilder::handleTextContent):
(WebCore::Layout::InlineItemsBuilder::handleInlineBoxStart):
(WebCore::Layout::InlineItemsBuilder::handleInlineBoxEnd):
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.h:
(WebCore::Layout::InlineItemsBuilder::contentRequiresVisualReordering const):
(WebCore::Layout::InlineItemsBuilder::needsVisualReordering const): Deleted.

Canonical link: https://commits.webkit.org/258348@main